# grt

./: .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGE_LOG.md  README.md  README.txt  index.html  params.json
Documentation/: Doxyfile
GRT/: GRT.h
GRT/ContextModules/: Gate.cpp  Gate.h
GRT/CoreModules/: Classifier.cpp  Classifier.h  Clusterer.cpp  Clusterer.h  Context.cpp  Context.h  FeatureExtraction.cpp  FeatureExtraction.h  GRTBase.cpp  GRTBase.h  GestureRecognitionPipeline.cpp  GestureRecognitionPipeline.h  MLBase.cpp  MLBase.h  PostProcessing.cpp  PostProcessing.h  PreProcessing.cpp  PreProcessing.h  Regressifier.cpp  Regressifier.h
GRT/DataStructures/: ClassificationData.cpp  ClassificationData.h  ClassificationDataStream.cpp  ClassificationDataStream.h  ClassificationSample.cpp  ClassificationSample.h  Matrix.h  MatrixFloat.cpp  MatrixFloat.h  RegressionData.cpp  RegressionData.h  RegressionSample.cpp  RegressionSample.h  TimeSeriesClassificationData.cpp  Vector.h  (+10 more)
GRTGUI/: BuildRelease_OSX.py
data/: IrisData.grt  README.md  basic_linear_dataset.grt  xor.grt
docs/: Doxyfile  README.md
examples/Tutorials/CustomMakefile/: CMakeLists.txt  Makefile  README.md  main.cpp
examples/Tutorials/CustomMakefile/cmake/: Findgrt.cmake
gui/: README.md  build-release_osx.py
jni/: Android.mk  Application.mk  grt.i
tools/: grt-lin-reg-tool.cpp  grt-log-reg-tool.cpp  grt-merge-tool.cpp  grt-mlp-tool.cpp  grt-rf-tool.cpp  grt-softmax-tool.cpp  grt-split-tool.cpp  grt-svm-tool.cpp  grt-test-tool.cpp
website/: index.html
wiki/: GRT.wiki  README.md
(+619 files in other folders)
